Silly scrollbar fix

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -525,7 +525,7 @@ div.sponsor {
 	> div > section {
 		padding-top: 20px;
 		padding-bottom: 20px;
-		overflow: auto;
+		overflow: visible;
 	}
 	a.button {
 		margin-top: 20px;
